<resources>
    <string name="str_auto_adjust">Auto Adjust</string>
    <string name="app_name">Tvsetting</string>
    <string name="str_pic_picture_adjustment">Imageadjust</string>
    <string name="str_pic_picture">Picture</string>
    <string name="str_pic_picturemode">Picture Mode</string>
    <string-array name="str_arr_pic_picturemode_vals">
        <item>Lightness</item>
        <item>Standard</item>
        <item>Soft</item>
        <item>User</item>
        <item>Game</item>
        <item>Auto</item>
        <item>Pc</item>
        <item>Vivid</item>
        <item>Natural</item>
        <item>Sports</item>
    </string-array>
    <string name="str_pic_contrast">Contrast</string>
    <string name="str_pic_brightness">Brightness</string>
    <string name="str_pic_color">Color</string>
    <string name="str_pic_sharpness">Sharpness</string>
    <string name="str_pic_hue">Hue</string>
    <string name="str_pic_saturation">Saturation</string>
    <string name="str_pic_backlight">Back Light</string>
    <string name="str_pic_colortemperature">Color Temperature</string>
    <string-array name="str_arr_pic_colortemperature_vals">
        <item>Cold</item>
        <item>Nature</item>
        <item>Warm</item>
        <item>User</item>
    </string-array>
    <string name="str_pic_colortemperature_red">Red</string>
    <string name="str_pic_colortemperature_green">Green</string>
    <string name="str_pic_colortemperature_blue">Blue</string>
    <string name="str_pic_hsb_color">HSB Color</string>
    <string name="str_pic_hsb_color_mode">Mode</string>
    <string name="str_pic_hsb_color_type">Type</string>
    <string-array name="str_arr_hsb_mode_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_pic_hsb_color_reset">Reset</string>
    <string-array name="str_arr_hsb_type_vals">
        <item>Hue</item>
        <item>Saturation</item>
        <item>Brightness</item>
    </string-array>
    <string-array name="str_arr_hsb_color_vals">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Magenta</item>
        <item>Yellow</item>
        <item>Flesh</item>
        <item>Yellow-Green</item>
        <item>Cyan-Green</item>
        <item>Flesh</item>
        <item>Flesh-Reddish</item>
        <item>Flesh-Lip</item>
        <item>Flesh-Yellow Hair</item>
        <item>Flesh-Meat</item>
        <item>Flesh-Dark Flesh</item>
        <item>Other Color</item>
    </string-array>
    <string name="str_pic_rgb_gamma">10 Point WB</string>
    <string name="str_pic_rgb_gamma_mode">Mode</string>
    <string-array name="str_arr_rgb_gamma_mode_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_pic_rgb_gamma_ire">IRE</string>
    <string-array name="str_arr_rgb_gamma_ire_vals">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>
    <string-array name="str_arr_rgb_gamma_color_vals">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string name="str_pic_rgb_gamma_reset">Reset</string>
    <string name="str_pic_zoommode">Zoom Mode</string>
    <string-array name="str_arr_pic_zoommode_vals">
        <item>Default</item>
        <item>16:9</item>
        <item>4:3</item>
        <item>Auto</item>
        <item>Panorama Mode</item>
        <item>Just Scan</item>
        <item>Zoom1</item>
        <item>Zoom2</item>
        <item>14:9</item>
        <item>P2P</item>
        <item>Subtitle</item>
        <item>Movie</item>
        <item>Personal</item>
        <item>4x3_PanScan</item>
        <item>4x3_LetterBox</item>
        <item>16x9_PillarBox</item>
        <item>16x9_PanScan</item>
        <item>4x3_Combind</item>
        <item>16x9_Combind</item>
        <item>Zoom_2x</item>
        <item>Zoom_3x</item>
        <item>Zoom_4x</item>
    </string-array>
    <string name="str_pic_imgnoisereduction">Image Noise Reduction</string>
    <string name="str_pic_mpegnoisereduction">MPEG Noise Reduction</string>
    <string-array name="str_arr_pic_imgnoisereduction_vals">
        <item>Off</item>
        <item>Weak</item>
        <item>Middle</item>
        <item>Strong</item>
        <item>Auto</item>
    </string-array>
    <string-array name="str_arr_pic_mpegnoisereduction_vals">
        <item>Off</item>
        <item>Weak</item>
        <item>Middle</item>
        <item>Strong</item>
    </string-array>
    <string name="str_pic_openhdr">Open HDR</string>
    <string-array name="str_arr_openhdr_vals">
        <item>Off</item>
        <item>Auto</item>
        <item>Low</item>
        <item>Middle</item>
        <item>High</item>
        <item>Ref. Mode</item>
    </string-array>
    <string name="str_pic_dolbyhdr">Dolby HDR</string>
    <string-array name="str_arr_dolbyhdr_vals">
        <item>Off</item>
        <item>Vivid</item>
        <item>Brightness</item>
        <item>Dark</item>
    </string-array>
    <string name="str_pic_swdrlevel">SWDR Level</string>
    <string name="str_pic_swdrstatus">SWDR Status</string>
    <string name="str_pic_swdrlevel_off">Off</string>
    <string-array name="str_arr_swdrstatus_vals">
        <item>Disabled</item>
        <item>Enabled</item>
        <item>Unknown</item>
    </string-array>
    <string name="str_pic_blackwhite_black">Black</string>
    <string name="str_pic_blackwhite_white">White</string>
    <string-array name="str_arr_sleep_mode_vals">
        <item>Off</item>
        <item>10 Minute</item>
        <item>20 Minute</item>
        <item>30 Minute</item>
        <item>60 Minute</item>
        <item>90 Minute</item>
        <item>120 Minute</item>
        <item>180 Minute</item>
        <item>240 Minute</item>
    </string-array>
    <string-array name="str_arr_pvr_mode_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_pic_pcimagemode">PC Image Mode</string>
    <string name="str_pic_autotune">Auto Tune</string>
    <string name="str_set_hdmicec_arc">HDMI_ARC</string>
    <string name="str_pic_pcimagemode_waiting">PC image is adjusting, please try later...</string>
    <string name="str_pic_pcimagemode_success">PC image adjusted success</string>
    <string name="str_pic_pcimagemode_failed">PC image adjusted fail</string>
    <string name="str_pic_clock">Clock</string>
    <string name="str_pic_phase">Phase</string>
    <string name="str_pic_horizontal_pos">Horizontal Position</string>
    <string name="str_pic_vertical_pos">Vertical Position</string>
    <string name="str_sound_sound_adjustment">Sound Mode</string>
    <string name="str_sound_soundmode">Sound Mode</string>
    <string-array name="str_arr_sound_soundmode_vals">
        <item>Standard</item>
        <item>Music</item>
        <item>Movie</item>
        <item>Sports</item>
        <item>User</item>
    </string-array>
    <string name="str_sound_bass">Low Pitch</string>
    <string name="str_sound_treble">High Pitch</string>
    <string name="str_sound_equalizer">Equilizer</string>
    <string name="str_sound_equalizer120hz">120Hz</string>
    <string name="str_sound_equalizer500hz">500Hz</string>
    <string name="str_sound_equalizer1.5khz">1.5KHz</string>
    <string name="str_sound_equalizer5khz">5KHz</string>
    <string name="str_sound_equalizer10khz">10KHz</string>
    <string name="str_sound_balance">Balance</string>
    <string name="str_sound_avc">AVC</string>
    <string name="str_sound_vd">Video Description</string>
    <string name="str_sound_ad">AD Switch</string>
    <string name="str_sound_ad_volume">AD Volume</string>
    <string name="str_sound_ad_mixerbalance">AD Mixer Balance</string>
    <string-array name="str_arr_sound_ad_mixerbalance_vals">
        <item>Equal</item>
        <item>Main 75%</item>
        <item>Main Max</item>
        <item>AD 75%</item>
        <item>AD Max</item>
    </string-array>
    <string name="str_sound_autohoh">Auto HOH</string>
    <string name="str_sound_truehdbypass">Dolby TrueHD/DTS-HD</string>
    <string name="str_sound_srs">SRS</string>
    <string-array name="str_arr_sound_vd_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string-array name="str_arr_sound_avc_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_sound_surround">Surround</string>
    <string-array name="str_arr_sound_surround_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_sound_spdifoutput">SPDIF Output</string>
    <string-array name="str_arr_sound_spdifoutput_vals">
        <item>PCM</item>
        <item>Off</item>
        <item>Auto</item>
        <item>Bypass</item>
        <item>Transcode</item>
    </string-array>
    <string name="str_sound_separatehear">Alone</string>
    <string-array name="str_arr_sound_separatehear_vals">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="str_3d_3d">3D</string>
    <string name="str_3d_self_adaptive_detecttriple">3D Self Detect</string>
    <string-array name="str_arr_3d_self_adaptive_detecttriple_vals">
        <item>Off</item>
        <item>Right Now</item>
        <item>When Source Change</item>
        <item>Real Time</item>
    </string-array>
    <string name="str_3dto2d_self_adaptive_detecttriple">3D-2D Self Detect</string>
    <string-array name="str_arr_3dto2d_self_adaptive_detecttriple_vals">
        <item>Off</item>
        <item>Right Now</item>
    </string-array>
    <string name="str_3d_self_adaptive_detectlevel">SelfAdaptive Level</string>
    <string-array name="str_arr_3d_self_adaptive_detectlevel_vals">
        <item>Low</item>
        <item>Middle</item>
        <item>High</item>
    </string-array>
    <string name="str_3d_conversion">3D Conversion</string>
    <string-array name="str_arr_3d_3dconversion_vals">
       <item>None</item>
        <item>SBS</item>
        <item>TB</item>
        <item>FP</item>
        <item>FP_720P</item>
        <item>LA</item>
        <item>FA</item>
        <item>FIELD_ALTERNATIVE</item>
        <item>CB</item>
        <item>2D-3D</item>
        <item>DUALVIEW</item>
        <item>PA</item>
        <item>4K2K_VIDEO_SPLIT</item>
        <item>FRAME_L</item>
        <item>FRAME_R</item>
    </string-array>
    <string name="str_3d_3dto2d">3Dto2D</string>
    <string-array name="str_arr_3d_3dto2d_vals">
       <item>None</item>
        <item>SBS</item>
        <item>TB</item>
        <item>FP</item>
        <item>FP_720P</item>
        <item>LA</item>
        <item>FA</item>
        <item>FIELD_ALTERNATIVE</item>
        <item>CB</item>
        <item>2D-3D</item>
        <item>DUALVIEW</item>
        <item>PA</item>
        <item>4K2K_VIDEO_SPLIT</item>
        <item>FRAME_L</item>
        <item>FRAME_R</item>
    </string-array>
    <string name="str_3d_3ddepth">3D Depth</string>
    <string name="str_pic_xvycc">xvYCC</string>
</resources>