<?xml version="1.0" encoding="utf-8" ?>
<!--
    <MStar Software>
    ******************************************************************************
     MStar Software
     Copyright (c) 2010 - 2014 MStar Semiconductor, Inc. All rights reserved.
     All software, firmware and related documentation herein ("MStar Software") are
     intellectual property of MStar Semiconductor, Inc. ("MStar") and protected by
     law, including, but not limited to, copyright law and international treaties.
     Any use, modification, reproduction, retransmission, or republication of all
     or part of MStar Software is expressly prohibited, unless prior written
     permission has been granted by MStar.

     By accessing, browsing and/or using MStar Software, you acknowledge that you
     have read, understood, and agree, to be bound by below terms ("Terms") and to
     comply with all applicable laws and regulations:

     1. MStar shall retain any and all right, ownership and interest to MStar
        Software and any modification/derivatives thereof.
        No right, ownership, or interest to MStar Software and any
        modification/derivatives thereof is transferred to you under Terms.

     2. You understand that MStar Software might include, incorporate or be
        supplied together with third party's software and the use of MStar
        Software may require additional licenses from third parties.
        Therefore, you hereby agree it is your sole responsibility to separately
        obtain any and all third party right and license necessary for your use of
        such third party's software.

     3. MStar Software and any modification/derivatives thereof shall be deemed as
        MStar's confidential information and you agree to keep MStar's
        confidential information in strictest confidence and not disclose to any
        third party.

     4. MStar Software is provided on an "AS IS" basis without warranties of any
        kind. Any warranties are hereby expressly disclaimed by MStar, including
        without limitation, any warranties of merchantability, non-infringement of
        intellectual property rights, fitness for a particular purpose, error free
        and in conformity with any international standard.  You agree to waive any
        claim against MStar for any loss, damage, cost or expense that you may
        incur related to your use of MStar Software.
        In no event shall MStar be liable for any direct, indirect, incidental or
        consequential damages, including without limitation, lost of profit or
        revenues, lost or damage of data, and unauthorized system use.
        You agree that this Section 4 shall still apply without being affected
        even if MStar Software has been modified by MStar in accordance with your
        request or instruction for your use, except otherwise agreed by both
        parties in writing.

     5. If requested, MStar may from time to time provide technical supports or
        services in relation with MStar Software to you for your use of
        MStar Software in conjunction with your or your customer's product
        ("Services").
        You understand and agree that, except otherwise agreed by both parties in
        writing, Services are provided on an "AS IS" basis and the warranty
        disclaimer set forth in Section 4 above shall apply.

     6. Nothing contained herein shall be construed as by implication, estoppels
        or otherwise:
        (a) conferring any license or right to use MStar name, trademark, service
            mark, symbol or any other identification;
        (b) obligating MStar or any of its affiliates to furnish any person,
            including without limitation, you and your customers, any assistance
            of any kind whatsoever, or any information; or
        (c) conferring any license or right under any intellectual property right.

     7. These terms shall be governed by and construed in accordance with the laws
        of Taiwan, R.O.C., excluding its conflict of law rules.
        Any and all dispute arising out hereof or related hereto shall be finally
        settled by arbitration referred to the Chinese Arbitration Association,
        Taipei in accordance with the ROC Arbitration Law and the Arbitration
        Rules of the Association by three (3) arbitrators appointed in accordance
        with the said Rules.
        The place of arbitration shall be in Taipei, Taiwan and the language shall
        be English.
        The arbitration award shall be final and binding to both parties.

    ******************************************************************************
    <MStar Software>
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout_pic_menu"
    style="@style/pic_mode_sty_menu">
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="33dp">
        <TextView
            android:text="@string/str_pic_picture"
            android:layout_width="110dp"
            android:layout_height="33dp"
            android:gravity="left"
            android:textSize="13dp"
            android:textColor="#FFFFFF">
        </TextView>
        <ImageView style="@style/sound_sty_enabledot"></ImageView>
        <ImageView style="@style/pic_mode_sty_disabledot" ></ImageView>
        <ImageView style="@style/pic_mode_sty_disabledot"></ImageView>
        <ImageView style="@style/pic_mode_sty_disabledot"></ImageView>
        <ImageView style="@style/pic_mode_sty_disabledot"></ImageView>
        <ImageView style="@style/pic_mode_sty_disabledot"></ImageView>
        <ImageView style="@style/pic_mode_sty_disabledot"></ImageView>
        <ImageView style="@style/pic_mode_sty_disabledot"></ImageView>
    </LinearLayout>
    <com.mstar.tv.tvplayer.ui.component.CycleScrollView
        android:id="@+id/cyclescrollview_pic_scroll_view"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="208dp"
        android:layout_marginTop="15dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            <!-- For Picture Mode -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_picturemode"
                style="@style/pic_mode_sty_combo_btn">
                <ImageView style="@style/pic_mode_sty_leftarrow"></ImageView>
                <TextView android:text="@string/str_pic_picturemode" style="@style/pic_mode_sty_combo_name"/>
                <TextView style="@style/pic_mode_sty_combo_indicator"/>
                <ImageView style="@style/pic_mode_sty_rightarrow"></ImageView>
            </LinearLayout>
            <!-- For Contrast -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_contrast"
                style="@style/pic_mode_sty_seekbar_btn">
                <TextView android:text="@string/str_pic_contrast" style="@style/pic_mode_sty_seekbar_name" />
                <TextView style="@style/pic_mode_sty_seekbar_indicator"/>
                <SeekBar style="@style/pic_mode_sty_bar" />
            </LinearLayout>
            <!-- For Brightness -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_brightness"
                style="@style/pic_mode_sty_seekbar_btn">
                <TextView style="@style/pic_mode_sty_seekbar_name"  android:text="@string/str_pic_brightness"/>
                <TextView  style="@style/pic_mode_sty_seekbar_indicator" />
                <SeekBar style="@style/pic_mode_sty_bar" />
            </LinearLayout>
            <!-- For Hue -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_hue"
                style="@style/pic_mode_sty_seekbar_btn">
                <TextView style="@style/pic_mode_sty_seekbar_name"  android:text="@string/str_pic_hue"/>
                <TextView  style="@style/pic_mode_sty_seekbar_indicator" />
                <SeekBar style="@style/pic_mode_sty_bar" />
            </LinearLayout>
            <!-- For Sharpness -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_sharpness"
                style="@style/pic_mode_sty_seekbar_btn">
                <TextView style="@style/pic_mode_sty_seekbar_name"  android:text="@string/str_pic_sharpness"/>
                <TextView  style="@style/pic_mode_sty_seekbar_indicator" />
                <SeekBar style="@style/pic_mode_sty_bar" />
            </LinearLayout>
            <!-- For Saturation -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_saturation"
                style="@style/pic_mode_sty_seekbar_btn">
                <TextView style="@style/pic_mode_sty_seekbar_name"  android:text="@string/str_pic_saturation"/>
                <TextView  style="@style/pic_mode_sty_seekbar_indicator" />
                <SeekBar style="@style/pic_mode_sty_bar" />
            </LinearLayout>
            <!-- For BackLight -->
            <LinearLayout
             android:id="@+id/linearlayout_pic_backlight"
             style="@style/pic_mode_sty_seekbar_btn">
                <TextView style="@style/pic_mode_sty_seekbar_name"  android:text="@string/str_pic_backlight"/>
                <TextView  style="@style/pic_mode_sty_seekbar_indicator" />
                <SeekBar style="@style/pic_mode_sty_bar" />
            </LinearLayout>
            <!-- PC Image Mode -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_pcimagemode"
                style="@style/pic_mode_sty_combo_btn">
                <TextView android:text="@string/str_pic_pcimagemode" style="@style/pic_mode_sty_combo_name"/>
            </LinearLayout>
            <!-- Color Temperature -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_colortemperature"
                style="@style/pic_mode_sty_combo_btn">
                <ImageView style="@style/pic_mode_sty_leftarrow"></ImageView>
                <TextView android:text="@string/str_pic_colortemperature" style="@style/pic_mode_sty_combo_name"/>
                <TextView style="@style/pic_mode_sty_combo_indicator"/>
                <ImageView style="@style/pic_mode_sty_rightarrow"></ImageView>
            </LinearLayout>
            <!-- Fo Red -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_colortemperature_red"
                style="@style/pic_mode_sty_seekbar_btn">
                <TextView style="@style/pic_mode_sty_seekbar_name"  android:text="@string/str_pic_colortemperature_red"/>
                <TextView style="@style/pic_mode_sty_colortmp_indicator" />
                <SeekBar style="@style/pic_mode_colortmp_sty_bar" />
            </LinearLayout>
            <!-- Fo Green -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_colortemperature_green"
                style="@style/pic_mode_sty_seekbar_btn">
                <TextView style="@style/pic_mode_sty_seekbar_name"  android:text="@string/str_pic_colortemperature_green"/>
                <TextView style="@style/pic_mode_sty_colortmp_indicator" />
                <SeekBar style="@style/pic_mode_colortmp_sty_bar" />
            </LinearLayout>
            <!-- Fo Blue -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_colortemperature_blue"
                style="@style/pic_mode_sty_seekbar_btn">
                <TextView style="@style/pic_mode_sty_seekbar_name"  android:text="@string/str_pic_colortemperature_blue"/>
                <TextView style="@style/pic_mode_sty_colortmp_indicator" />
                <SeekBar style="@style/pic_mode_colortmp_sty_bar" />
            </LinearLayout>
            <!-- HSB Color -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_hsb_color"
                style="@style/button_style">
                <TextView
                    style="@style/button_textview_style"
                    android:text="@string/str_pic_hsb_color" />
            </LinearLayout>
            <!-- RGB gamma -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_rgb_gamma"
                style="@style/button_style">
                <TextView
                    style="@style/button_textview_style"
                    android:text="@string/str_pic_rgb_gamma" />
            </LinearLayout>
            <!-- Zoom Mode -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_zoommode"
                style="@style/pic_mode_sty_combo_btn">
                <ImageView style="@style/pic_mode_sty_leftarrow"></ImageView>
                <TextView android:text="@string/str_pic_zoommode" style="@style/pic_mode_sty_combo_name"/>
                <TextView  style="@style/pic_mode_sty_combo_indicator"/>
                <ImageView style="@style/pic_mode_sty_rightarrow"></ImageView>
            </LinearLayout>
            <!-- Image Noise Reduction -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_imgnoisereduction"
                style="@style/pic_mode_sty_combo_btn">
                <ImageView style="@style/pic_mode_sty_leftarrow"></ImageView>
                <TextView android:text="@string/str_pic_imgnoisereduction" style="@style/pic_mode_sty_combo_name"/>
                <TextView  style="@style/pic_mode_sty_combo_indicator"/>
                <ImageView style="@style/pic_mode_sty_rightarrow"></ImageView>
            </LinearLayout>
            <!-- MPEG Noise Reduction -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_mpegnoisereduction"
                style="@style/pic_mode_sty_combo_btn">
                <ImageView style="@style/pic_mode_sty_leftarrow"></ImageView>
                <TextView android:text="@string/str_pic_mpegnoisereduction" style="@style/pic_mode_sty_combo_name"/>
                <TextView  style="@style/pic_mode_sty_combo_indicator"/>
                <ImageView style="@style/pic_mode_sty_rightarrow"></ImageView>
            </LinearLayout>
            <!-- Open HDR -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_openhdr"
                android:visibility="gone"
                style="@style/pic_mode_sty_combo_btn">
                <ImageView style="@style/pic_mode_sty_leftarrow"></ImageView>
                <TextView android:text="@string/str_pic_openhdr" style="@style/pic_mode_sty_combo_name"/>
                <TextView  style="@style/pic_mode_sty_combo_indicator"/>
                <ImageView style="@style/pic_mode_sty_rightarrow"></ImageView>
            </LinearLayout>
            <!-- Dolby HDR -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_dolbyhdr"
                android:visibility="gone"
                style="@style/pic_mode_sty_combo_btn">
                <ImageView style="@style/pic_mode_sty_leftarrow"></ImageView>
                <TextView android:text="@string/str_pic_dolbyhdr" style="@style/pic_mode_sty_combo_name"/>
                <TextView  style="@style/pic_mode_sty_combo_indicator"/>
                <ImageView style="@style/pic_mode_sty_rightarrow"></ImageView>
            </LinearLayout>
            <!-- SWDR Level -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_swdrlevel"
                style="@style/pic_mode_sty_combo_btn">
                <ImageView style="@style/pic_mode_sty_leftarrow"></ImageView>
                <TextView android:text="@string/str_pic_swdrlevel" style="@style/pic_mode_sty_combo_name"/>
                <TextView style="@style/pic_mode_sty_combo_indicator"/>
                <ImageView style="@style/pic_mode_sty_rightarrow"></ImageView>
            </LinearLayout>
            <!-- SWDR Status -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_swdrstatus"
                style="@style/pic_mode_sty_combo_btn">
                <ImageView style="@style/pic_mode_sty_leftarrow"></ImageView>
                <TextView android:text="@string/str_pic_swdrstatus" style="@style/pic_mode_sty_combo_name"/>
                <TextView style="@style/pic_mode_sty_combo_indicator" />
                <ImageView style="@style/pic_mode_sty_rightarrow"></ImageView>
            </LinearLayout>
            <!-- Black & White for Black -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_blackwhite_black"
                android:visibility="gone"
                style="@style/pic_mode_sty_seekbar_btn">
                <TextView android:text="@string/str_pic_blackwhite_black" style="@style/pic_mode_sty_seekbar_name" />
                <TextView style="@style/pic_mode_sty_seekbar_indicator"/>
                <SeekBar style="@style/pic_mode_blackwhite_sty_bar" />
            </LinearLayout>
            <!-- Black & White for White -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_blackwhite_white"
                android:visibility="gone"
                style="@style/pic_mode_sty_seekbar_btn">
                <TextView android:text="@string/str_pic_blackwhite_white" style="@style/pic_mode_sty_seekbar_name" />
                <TextView style="@style/pic_mode_sty_seekbar_indicator"/>
                <SeekBar style="@style/pic_mode_blackwhite_sty_bar" />
            </LinearLayout>
            <!-- vxYCC tune on/off -->
            <LinearLayout
                android:id="@+id/linearlayout_pic_xvycc"
                style="@style/pic_mode_sty_combo_btn">
                <ImageView style="@style/pic_mode_sty_leftarrow"></ImageView>
                <TextView android:text="@string/str_pic_xvycc" style="@style/pic_mode_sty_combo_name"/>
                <TextView  style="@style/pic_mode_sty_combo_indicator"/>
                <ImageView style="@style/pic_mode_sty_rightarrow" ></ImageView>
            </LinearLayout>
        </LinearLayout>
    </com.mstar.tv.tvplayer.ui.component.CycleScrollView>
    <include layout="@layout/mainmenu_footer" />
</LinearLayout>
